# polhemstylus

./: .gitignore  CMakeLists.txt  README.md  etc-initd-stylus  polhem_stylus.js  stylus_service.js
clients/cpp/: README.md
clients/cpp/Linux/: .gitignore  CMakeLists.txt  README.md  SocketClient.h  SocketServer.cpp  aClient.cpp  buildlog.txt  cannoFindLib.txt  scan.c  socketServer.h  socket_client  socket_client.c  stylusProxy.cpp  stylus_client.c  stylus_client.cpp
clients/cpp/Linux/book/: README.md  error_functions.h  get_num.c  make.sh  tlpi_hdr.h  ud_ucase.h  ud_ucase_cl.c  ud_ucase_sv.c  us_xfr.h  us_xfr_cl.c  us_xfr_sv.c
clients/cpp/Linux/book_tiny_example/: make.sh  ud_ucase_cl.c  ud_ucase_sv.c
clients/cpp/Linux/hfab/: README.md  main.cpp  uhaptikfabriken.h
clients/cpp/StylusClientLinux/: .gitignore  CMakeLists.txt  scan.c  stylus_client.c
clients/cpp/StylusClientWinRT/: BLEdeviceFinder.cpp  BLEdeviceFinder.h  StylusClientWinRT.sln  StylusClientWinRT.vcxproj  StylusClientWinRT.vcxproj.filters  helpers.cpp  helpers.h  main.cpp  readme.txt
clients/cpp/WinRT/: SocketServer.cpp  StylusClientWinRT.vcxproj  StylusClientWinRT.vcxproj.filters  main.cpp  socketServer.h  uhaptikfabriken.h
clients/cpp/common/: SocketClient.h
clients/cpp/stylusProxyWin/: CMakeLists.txt
clients/cpp/unixsocket1/: unixsocket1.sln
clients/cpp/unixsocket1/unixsocket1/: SocketClient.cpp  SocketClient.h  unixsocket1.cpp  unixsocket1.vcxproj  unixsocket1.vcxproj.filters
clients/nodejs/: index.js
clients/web/: simple.html  web.html
docs/: README.md
firmware/: simple.js  stylus_service.js
http_interprocess/: README.md  client.cpp  server.cpp
proxy/: CMakeLists.txt  CMakeSettings.json  Readme.txt
proxy/src/: SocketServer.cpp  SocketServer.h  glibMain.cpp  winMain.cpp
proxyClient/: CMakeLists.txt  SocketClient.h  aClient.cpp  winMain.cpp
tmp/winworks-2020-11-04/: polhem_teensy.ino  uhaptikfabriken.h
